minor fixes: licence, renaming, coding style
Signed-off-by: Nicolas Pierre <nicolas.pierre@artelys.com>